Add some tweaks to content and responsiveness.

--- a/scss/bleuprint.scss
+++ b/scss/bleuprint.scss
@@ -38,8 +38,14 @@ h6 {
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 2.12rem;
+}
+
+@media (min-width: $breakpoint-mobile) {
+  p {
+    font-size: 1.25rem;
+  }
 }
 
 a,
